@@ -3,6 +3,7 @@ trunk
 * added 'newlabels' argument to omxSetParameters() function
 * now throwing errors to the user when detected from the backend in mxRun()
 * very basic checkpointing mechanism implemented
+* never computing confidence intervals for matrix cells where free = FALSE (all bets are off on algebras)
 
 Release 0.3.1-1246 (May 09, 2010)
 =================================
